[gd_scene load_steps=9 format=3 uid="uid://cgr4geo8c80qx"]

[ext_resource type="Script" path="res://scripts/leaderboard.gd" id="1_d1xug"]
[ext_resource type="Theme" uid="uid://bkm8kucwa6aa7" path="res://Themes and Fonts/Buttons_theme.tres" id="2_4heag"]
[ext_resource type="FontFile" path="res://Themes and Fonts/Buttons_font.tres" id="2_dvau7"]
[ext_resource type="PackedScene" uid="uid://dkg7usnqqnd85" path="res://scenes/TileMap.tscn" id="3_a1g5r"]
[ext_resource type="Texture2D" uid="uid://bdnihj2pkodie" path="res://Sprites/buttons/ButtonBlue13.png" id="3_v0bho"]
[ext_resource type="Script" path="res://scripts/Buttons/Button.gd" id="4_upirh"]
[ext_resource type="AudioStream" uid="uid://dj27wsbek41mt" path="res://music/Web surf loop 6.ogg" id="7_o10ic"]

[sub_resource type="Theme" id="Theme_bbbbi"]
default_font = ExtResource("2_dvau7")
default_font_size = 38

[node name="Leaderboard" type="Node2D"]
script = ExtResource("1_d1xug")

[node name="CanvasLayer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1

[node name="TileMap" parent="CanvasLayer" groups=["TileMap"] instance=ExtResource("3_a1g5r")]
modulate = Color(0.196078, 0.682353, 0.639216, 1)
z_index = 0
position = Vector2(-1.52588e-05, 0)
layer_0/tile_data = PackedInt32Array(65536, 393216, 6, 131072, 589824, 1, 196607, 393216, 1, 131071, 655360, 1, 0, 589824, 9, 65535, 393216, 2, 1, 393216, 5, 65537, 524288, 8, 2, 655360, 6, 65538, 589824, 6, -65536, 393216, 2, 65539, 393216, 5, 131075, 720896, 1, 65540, 655360, 5, 131076, 65536, 3, 65541, 655360, 5, 65542, 655360, 5, 65543, 655360, 5, 65544, 655360, 5, 65545, 393216, 5, 131081, 327680, 1, 65546, 393216, 5, 131082, 589824, 1, 65547, 393216, 5, 131083, 327680, 1, 65548, 393216, 5, 131084, 589824, 1, 65549, 393216, 5, 131085, 327680, 1, 65550, 393216, 5, 131086, 589824, 1, 65551, 393216, 5, 131087, 589824, 1, 65552, 524288, 9, 131088, 393216, 1, 65553, 327680, 2, 131089, 327680, 1, 16, 655360, 5, 17, 393216, 5, 18, 393216, 5, 65554, 327680, 1, 19, 393216, 5, 65555, 589824, 1, 20, 393216, 5, 65556, 327680, 1, 21, 393216, 5, 65557, 393216, 1, 22, 393216, 5, 65558, 327680, 1, 23, 393216, 5, 65559, 589824, 1, 24, 655360, 6, 65560, 589824, 1, 65561, 655360, 5, 131097, 589824, 1, 131096, 655360, 1, 65562, 393216, 5, 131098, 589824, 1, 65563, 393216, 5, 131099, 589824, 1, 65564, 393216, 5, 131100, 655360, 1, 65565, 393216, 5, 131101, 589824, 1, 65566, 393216, 5, 131102, 393216, 1, 65567, 393216, 5, 131103, 327680, 1, 65568, 393216, 5, 131104, 655360, 1, 34, 393216, 5, 33, 720896, 8, 32, 393216, 1, 65569, 393216, 1, 65570, 589824, 1, -65504, 393216, 2, -65503, 589824, 5, -65502, 327680, 2, 35, 393216, 5, 65571, 655360, 1, 37, 393216, 5, 36, 393216, 5, 65572, 393216, 1, 65573, 327680, 1, 38, 393216, 5, 65574, 393216, 1, 40, 393216, 5, 39, 393216, 5, 65575, 655360, 1, 65576, 327680, 1, 41, 655360, 5, 65577, 393216, 6, 42, 655360, 5, 65578, 327680, 1, 43, 393216, 5, 65579, 327680, 1, 44, 393216, 5, 65580, 589824, 1, 45, 393216, 5, 65581, 327680, 1, 46, 393216, 5, 65582, 589824, 1, 47, 393216, 5, 65583, 393216, 1, 48, 393216, 5, 65584, 327680, 1, 49, 393216, 5, 65585, 327680, 1, 50, 393216, 5, 65586, 655360, 1, 51, 393216, 5, 65587, 589824, 1, 52, 393216, 5, 65588, 393216, 1, 54, 393216, 5, 53, 393216, 5, 65589, 655360, 1, 65590, 589824, 1, 55, 393216, 5, 65591, 655360, 1, 56, 393216, 5, 65592, 589824, 1, 57, 393216, 5, 65593, 327680, 1, 58, 393216, 5, 65594, 327680, 1, 59, 393216, 5, 65595, 589824, 1, 60, 393216, 5, 65596, 589824, 1, 61, 393216, 5, 65597, 327680, 1, 62, 393216, 5, 65598, 327680, 1, 63, 393216, 5, 65599, 589824, 1, 64, 393216, 5, 65600, 589824, 1, 65, 393216, 5, 65601, 589824, 1, 66, 393216, 5, 65602, 327680, 1, 67, 393216, 5, 65603, 589824, 1, 68, 589824, 9, 65604, 720896, 8, 65605, 720896, 1, 131141, 655360, 1, 65606, 655360, 6, 131142, 720896, 8, 131143, 393216, 5, 196679, 589824, 1, 131144, 655360, 5, 196680, 720896, 8, 196678, 655360, 1, 196681, 655360, 5, 262217, 524288, 9, 262218, 327680, 2, 262216, 393216, 1, 327753, 0, 9, 327754, 589824, 1, 327752, 589824, 9, 393288, 655360, 6, 393287, 393216, 1, 327751, 393216, 2, 458824, 655360, 6, 458823, 655360, 1, 524360, 655360, 6, 524359, 393216, 1, 589896, 655360, 6, 589895, 393216, 1, 655432, 655360, 6, 655431, 393216, 1, 720968, 655360, 9, 720967, 393216, 1, 720969, 327680, 2, 786504, 0, 9, 786503, 655360, 1, 786505, 327680, 1, 852039, 655360, 5, 917575, 524288, 9, 917574, 655360, 1, 852038, 393216, 2, 917576, 327680, 2, 983111, 0, 9, 983112, 589824, 1, 983110, 655360, 1, 1048646, 655360, 5, 1114182, 327680, 1, 1114181, 655360, 1, 1048645, 393216, 2, 1114183, 655360, 5, 1179719, 655360, 6, 1179718, 655360, 1, 1245255, 655360, 6, 1245254, 655360, 1, 1310791, 524288, 9, 1310790, 393216, 1, 1310792, 327680, 2, 1376327, 0, 9, 1376328, 327680, 1, 1376326, 393216, 1, 1441862, 655360, 5, 1507398, 524288, 9, 1507397, 655360, 1, 1441861, 393216, 2, 1507399, 327680, 2, 1572934, 0, 9, 1572933, 589824, 9, 1572935, 589824, 1, 1572932, 393216, 2, 1638469, 524288, 9, 1638468, 393216, 1, 1704005, 720896, 8, 1638470, 327680, 2, 1704006, 655360, 6, 1704004, 655360, 1, 1769542, 655360, 6, 1769541, 655360, 1, 1835078, 655360, 6, 1835077, 655360, 1, 1900614, 655360, 6, 1900613, 655360, 1, 1966150, 655360, 6, 1966149, 655360, 1, 2031686, 655360, 6, 2031685, 655360, 1, 2097222, 655360, 6, 2097221, 393216, 1, 2162758, 655360, 6, 2162757, 720896, 8, 2228294, 524288, 9, 2228293, 131072, 0, 2228295, 327680, 2, 2293830, 0, 9, 2293829, 720896, 9, 2293831, 655360, 6, 2359367, 655360, 9, 2359368, 327680, 2, 2424903, 393216, 6, 2424902, 0, 9, 2424904, 327680, 1, 2490439, 589824, 1, 2424901, 524288, 8, 2359365, 655360, 6, 2424900, 0, 9, 2359364, 589824, 5, 2424899, 0, 9, 2359363, 655360, 9, 2424898, 0, 9, 2359362, 131072, 1, 2293826, 589824, 9, 2359361, 131072, 2, 2293825, 327680, 1, 2228289, 393216, 6, 2228288, 0, 9, 2162752, 589824, 5, 2162753, 327680, 2, 2228287, 0, 9, 2162751, 589824, 5, 2228286, 0, 9, 2162750, 589824, 5, 2228285, 0, 9, 2162749, 589824, 5, 2228284, 0, 9, 2162748, 589824, 5, 2228283, 0, 9, 2162747, 589824, 5, 2228282, 589824, 9, 2162746, 393216, 2, 2228281, 327680, 1, 2162745, 655360, 6, 2293818, 327680, 1, 2293817, 393216, 1, 2228280, 655360, 1, 2162744, 720896, 8, 2097208, 589824, 5, 2097209, 327680, 2, 2162743, 655360, 1, 2097207, 393216, 2, 2228279, 655360, 6, 2293814, 655360, 9, 2228278, 720896, 9, 2162742, 393216, 2, 2228277, 393216, 2, 2293813, 393216, 1, 2359350, 589824, 6, 2359349, 0, 9, 2359351, 655360, 9, 2424886, 720896, 8, 2424887, 524288, 1, 2490422, 393216, 1, 2490423, 720896, 8, 2424888, 262144, 0, 2490424, 0, 9, 2490425, 0, 9, 2424889, 655360, 0, 2555961, 393216, 2, 2490426, 589824, 6, 2424890, 720896, 2, 2555962, 720896, 9, 2555963, 458752, 8, 2621498, 589824, 1, 2621497, 393216, 1, 2555964, 458752, 9, 2621500, 327680, 1, 2555965, 655360, 6, 2621501, 327680, 1, 2555966, 655360, 1, 2490430, 262144, 8, 2490429, 720896, 0, 2490432, 524288, 9, 2490431, 458752, 9, 2424894, 196608, 0, 2555968, 655360, 1, 2490433, 327680, 2, 2555969, 327680, 1, 2424896, 524288, 8, 2424897, 0, 9, 2359360, 458752, 9, 2424895, 393216, 0, 2359359, 589824, 9, 2555967, 393216, 1, 2424893, 327680, 0, 2490427, 327680, 3, 2490428, 65536, 2, 2424892, 327680, 3, 2424891, 524288, 3, 2359352, 589824, 5, 2359353, 589824, 5, 2293815, 327680, 2, 2359348, 0, 9, 2293812, 589824, 5, 2359347, 0, 9, 2293811, 589824, 5, 2359346, 655360, 1, 2293810, 393216, 2, 2424882, 655360, 8, 2424881, 0, 9, 2424880, 0, 9, 2424883, 589824, 1, 2359345, 589824, 5, 2359344, 589824, 5, 2424879, 0, 9, 2359343, 589824, 5, 2424878, 655360, 1, 2359342, 393216, 2, 2490414, 655360, 8, 2555950, 720896, 9, 2490413, 0, 9, 2424877, 589824, 5, 2490412, 0, 9, 2424876, 589824, 5, 2490411, 0, 9, 2424875, 589824, 5, 2490410, 0, 9, 2424874, 589824, 5, 2490409, 0, 9, 2424873, 589824, 5, 2490408, 0, 0, 2424872, 589824, 5, 2490407, 720896, 9, 2424871, 589824, 5, 2490406, 589824, 5, 2424870, 393216, 2, 2555942, 0, 9, 2555941, 65536, 1, 2490405, 589824, 5, 2555940, 655360, 0, 2490404, 589824, 5, 2555939, 131072, 3, 2490403, 589824, 5, 2555938, 65536, 2, 2490402, 589824, 5, 2555937, 0, 9, 2490401, 589824, 5, 2555936, 0, 9, 2490400, 589824, 5, 2555935, 0, 9, 2490399, 589824, 5, 2555934, 0, 9, 2490398, 589824, 5, 2555933, 0, 9, 2490397, 589824, 5, 2555932, 0, 9, 2490396, 589824, 5, 2555931, 655360, 1, 2490395, 393216, 2, 2621467, 655360, 6, 2687003, 327680, 1, 2687002, 655360, 1, 2621466, 0, 9, 2555930, 589824, 5, 2621465, 0, 9, 2555929, 655360, 9, 2621464, 589824, 9, 2555928, 655360, 1, 2621463, 589824, 1, 2555927, 655360, 6, 2687000, 589824, 1, 2686999, 655360, 1, 2555926, 0, 9, 2490390, 589824, 5, 2490391, 327680, 2, 2555925, 0, 9, 2490389, 589824, 5, 2555924, 0, 9, 2490388, 589824, 5, 2555923, 589824, 9, 2490387, 393216, 2, 2555922, 589824, 1, 2490386, 655360, 6, 2621459, 327680, 1, 2621458, 393216, 1, 2490385, 0, 9, 2424849, 589824, 5, 2424850, 327680, 2, 2490384, 0, 9, 2424848, 589824, 5, 2490383, 0, 9, 2424847, 589824, 5, 2490382, 589824, 9, 2424846, 393216, 2, 2490381, 327680, 1, 2424845, 655360, 6, 2555918, 327680, 1, 2555917, 393216, 1, 2424844, 0, 9, 2359308, 589824, 5, 2359309, 327680, 2, 2424843, 0, 9, 2359307, 589824, 5, 2424842, 0, 9, 2359306, 589824, 5, 2424841, 655360, 1, 2359305, 393216, 2, 2490377, 0, 9, 2490376, 0, 9, 2490375, 0, 9, 2490378, 589824, 1, 2424840, 589824, 5, 2424839, 589824, 5, 2490374, 0, 9, 2424838, 524288, 9, 2490373, 0, 9, 2424837, 393216, 5, 2490372, 0, 9, 2424836, 589824, 9, 2490371, 589824, 9, 2424835, 393216, 2, 2490370, 589824, 5, 2555907, 0, 9, 2555906, 0, 9, 2555905, 0, 9, 2490369, 589824, 5, 2555904, 0, 9, 2490368, 524288, 9, 2621439, 655360, 1, 2555903, 393216, 1, 2424832, 655360, 6, 2490367, 655360, 1, 2359296, 655360, 6, 2424831, 655360, 1, 2293760, 655360, 8, 2359295, 393216, 1, 2228224, 196608, 2, 2293759, 393216, 1, 2162688, 655360, 9, 2228223, 655360, 1, 2097152, 655360, 6, 2162687, 655360, 1, 2031616, 655360, 6, 2097151, 393216, 1, 1966080, 655360, 5, 2031615, 393216, 2, 1900545, 655360, 6, 1966081, 589824, 1, 1900544, 655360, 1, 1835009, 655360, 6, 1835008, 655360, 1, 1769473, 655360, 6, 1769472, 655360, 1, 1703937, 655360, 6, 1703936, 393216, 1, 1638401, 655360, 5, 1638400, 393216, 2, 1572866, 655360, 6, 1638402, 589824, 1, 1572865, 655360, 1, 1507330, 655360, 5, 1507329, 327680, 1, 1441793, 655360, 6, 1507328, 393216, 1, 1441792, 655360, 1, 1376257, 655360, 6, 1376256, 655360, 1, 1310721, 655360, 5, 1310720, 327680, 1, 1245184, 655360, 6, 1376255, 655360, 1, 1310719, 655360, 1, 1179648, 655360, 6, 1245183, 393216, 1, 1114112, 655360, 5, 1179647, 589824, 1, 1114111, 393216, 6, 1179646, 393216, 1, 1114110, 655360, 1, 1048575, 720896, 9, 1048574, 393216, 2, 983039, 524288, 9, 983038, 393216, 1, 917503, 655360, 6, 917502, 655360, 1, 851967, 655360, 5, 851966, 393216, 2, 720896, 655360, 6, 786432, 589824, 1, 786431, 393216, 1, 655360, 655360, 6, 720895, 393216, 1, 589824, 655360, 6, 655359, 655360, 1, 524288, 655360, 8, 589823, 393216, 1, 393217, 655360, 8, 458752, 655360, 5, 524289, 589824, 1, 524287, 393216, 2, 458753, 327680, 1, 393216, 393216, 1, 327681, 524288, 9, 327680, 655360, 1, 262145, 655360, 6, 262144, 393216, 1, 196609, 524288, 8, 196608, 393216, 1, 131073, 655360, 9, 131074, 327680, 6, 131077, 262144, 2, 131078, 524288, 2, 196614, 0, 9, 131079, 524288, 9, 196615, 393216, 6, 131080, 327680, 2, 196616, 589824, 1, 262151, 589824, 1, 2555959, 393216, 6, 2555960, 589824, 1, 2555958, 0, 9, 2555957, 0, 9, 2490421, 655360, 6, 2555956, 0, 9, 2490420, 589824, 6, 2621491, 524288, 9, 2555955, 655360, 1, 2490419, 0, 9, 2687027, 0, 9, 2687026, 0, 9, 2621490, 589824, 9, 2621489, 589824, 5, 2687025, 0, 9, 2687024, 0, 9, 2621488, 589824, 5, 2687023, 393216, 1, 2621487, 393216, 2, 2687028, 0, 9, 2621492, 589824, 5, 2687029, 393216, 5, 2752564, 655360, 1, 2752565, 589824, 1, 2621493, 327680, 2, 2687030, 393216, 5, 2752566, 655360, 1, 2687031, 393216, 5, 2752567, 327680, 1, 2687032, 393216, 5, 2752568, 327680, 1, 2687033, 393216, 5, 2752569, 655360, 1, 2687034, 655360, 6, 2752570, 327680, 1, 2752571, 655360, 5, 2752572, 393216, 5, 2818108, 589824, 1, 2818107, 589824, 1, 2818106, 393216, 1, 2752573, 393216, 5, 2818109, 589824, 1, 2752574, 655360, 3, 2818110, 327680, 1, 2752575, 327680, 1, 2687039, 589824, 9, 2687038, 393216, 2, 2687041, 655360, 3, 2687040, 393216, 5, 2752576, 393216, 1, 2621503, 393216, 2, 2752577, 327680, 1, 2687042, 589824, 1, 2621506, 589824, 9, 2621505, 393216, 2, 2621507, 655360, 8, 2687043, 327680, 1, 2555970, 393216, 2, 2555971, 589824, 5, 2621508, 327680, 1, 2555972, 589824, 9, 2555973, 524288, 9, 2621509, 655360, 1, 2555974, 327680, 2, 2621510, 589824, 1, 2490437, 655360, 6, 2490436, 655360, 1, 2162756, 655360, 1, 2097220, 393216, 2, 2228292, 0, 9, 2293828, 327680, 2, 2293827, 655360, 9, 2228291, 393216, 1, 2162755, 393216, 2, 2228290, 393216, 2, 2293824, 393216, 1, 2293823, 393216, 2, 2359358, 589824, 5, 2359357, 589824, 5, 2359356, 589824, 5, 2359355, 589824, 5, 2359354, 589824, 5, 2424885, 655360, 1, 2424884, 393216, 2, 2555953, 0, 9, 2490418, 0, 9, 2490417, 393216, 1, 2555952, 0, 9, 2555954, 589824, 1, 2490416, 393216, 2, 2555951, 0, 9, 2490415, 327680, 1, 2555949, 589824, 5, 2621486, 393216, 6, 2621485, 0, 9, 2687022, 327680, 1, 2621484, 0, 9, 2555948, 589824, 5, 2621483, 0, 9, 2555947, 589824, 5, 2621482, 0, 9, 2555946, 589824, 5, 2621481, 0, 9, 2555945, 589824, 5, 2621480, 0, 9, 2555944, 589824, 6, 2555943, 0, 9, 2621477, 0, 9, 2621478, 589824, 1, 2621476, 0, 9, 2621475, 0, 9, 2621474, 0, 9, 2687009, 655360, 5, 2621473, 393216, 1, 2752545, 327680, 1, 2752544, 393216, 1, 2687008, 393216, 2, 1441860, 655360, 6, 1507396, 589824, 1, 1507395, 655360, 1, 1441859, 655360, 1, 1376324, 655360, 6, 1376323, 393216, 1, 1310788, 655360, 5, 1310787, 393216, 2, 458818, 655360, 5, 524354, 327680, 1, 524353, 655360, 1, 458817, 393216, 2, 196663, 589824, 9, 262199, 327680, 1, 262198, 393216, 1, 196662, 393216, 2, 196665, 393216, 5, 196664, 393216, 5, 262200, 393216, 1, 131127, 393216, 2, 131128, 327680, 2, 262201, 655360, 1, 196666, 327680, 2, 262202, 589824, 1, 69, 393216, 5, 70, 327680, 2, -65468, 393216, 2, -65467, 327680, 2, 196671, 655360, 5, 262207, 589824, 1, 262206, 393216, 1, 196670, 393216, 2, 327685, 655360, 6, 393221, 327680, 1, 393220, 393216, 1, 327684, 720896, 8, 262148, 589824, 5, 262149, 327680, 2, 327683, 393216, 1, 262147, 589824, 1, 327682, 393216, 5, 393218, 589824, 1, 196611, 393216, 6, 196610, 0, 9, 262146, 393216, 1, 196612, 0, 9, 196613, 0, 9, 1048579, 655360, 5, 1114115, 393216, 6, 1114114, 720896, 9, 1048578, 393216, 2, 1114116, 589824, 1, 1179651, 589824, 1, 1179650, 393216, 6, 1114113, 393216, 2, 1179649, 393216, 1, 2424833, 393216, 5, 2162689, 393216, 5, 2228226, 393216, 1, 2228225, 393216, 6, 2293761, 589824, 1, 2359300, 393216, 2, 2359302, 655360, 5, 2162690, 393216, 5, 2162691, 327680, 2, 2228227, 327680, 1, 196642, 589824, 9, 262178, 327680, 1, 262177, 655360, 1, 196641, 393216, 2, 196643, 655360, 9, 262179, 655360, 1, 131106, 393216, 2, 131107, 589824, 9, 196644, 327680, 2, 262180, 327680, 1, 131109, 393216, 5, 131108, 393216, 5, 196645, 655360, 1, 131110, 327680, 2, 196646, 327680, 1, 131113, 589824, 1, 131112, 655360, 1, 2490393, 655360, 5, 2490392, 393216, 2, 1048576, 524288, 9, 1048577, 327680, 2, 983040, 524288, 9, 983041, 327680, 2, 917504, 327680, 2)

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
z_index = -1
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
offset_left = -288.0
offset_top = -160.0
offset_right = 1432.0
offset_bottom = 856.0
color = Color(0.25098, 0.356863, 0.388235, 1)

[node name="LeaderboardLabel" type="Label" parent="CanvasLayer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 32.0
offset_top = 64.0
offset_right = 1088.0
offset_bottom = 576.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_bbbbi")
horizontal_alignment = 1

[node name="DeleteLeaderboard" type="TextureButton" parent="CanvasLayer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 0
offset_left = 32.0
offset_top = 576.0
offset_right = 288.0
offset_bottom = 626.0
texture_normal = ExtResource("3_v0bho")
texture_pressed = ExtResource("3_v0bho")
stretch_mode = 0

[node name="Label" type="Label" parent="CanvasLayer/DeleteLeaderboard"]
layout_mode = 0
offset_right = 232.0
offset_bottom = 49.0
theme = ExtResource("2_4heag")
text = "Delete Leaderboard"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="DeletingLeaderboard" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 320.0
offset_top = 192.0
offset_right = 832.0
offset_bottom = 384.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/DeletingLeaderboard"]
layout_mode = 0
offset_right = 512.0
offset_bottom = 192.0
color = Color(0.235294, 0.235294, 0.235294, 1)

[node name="DeleteLeaderboard2" type="TextureButton" parent="CanvasLayer/DeletingLeaderboard"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 0
offset_left = 8.0
offset_top = 136.0
offset_right = 224.0
offset_bottom = 186.0
texture_normal = ExtResource("3_v0bho")
texture_pressed = ExtResource("3_v0bho")
stretch_mode = 0

[node name="DeleteLabel" type="Label" parent="CanvasLayer/DeletingLeaderboard/DeleteLeaderboard2"]
layout_mode = 0
offset_right = 216.0
offset_bottom = 49.0
theme = ExtResource("2_4heag")
text = "Delete Leaderboard"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="NotDeleteLeaderboard" type="TextureButton" parent="CanvasLayer/DeletingLeaderboard"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 0
offset_left = 288.0
offset_top = 136.0
offset_right = 504.0
offset_bottom = 186.0
texture_normal = ExtResource("3_v0bho")
texture_pressed = ExtResource("3_v0bho")
stretch_mode = 0

[node name="NoLabel" type="Label" parent="CanvasLayer/DeletingLeaderboard/NotDeleteLeaderboard"]
layout_mode = 0
offset_right = 216.0
offset_bottom = 49.0
theme = ExtResource("2_4heag")
text = "No"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="Label" type="Label" parent="CanvasLayer/DeletingLeaderboard"]
layout_mode = 0
offset_right = 512.0
offset_bottom = 128.0
theme = ExtResource("2_4heag")
text = "Are you sure you want to delete
leaderboard data?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackToMenu" type="TextureButton" parent="CanvasLayer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 0
offset_left = 888.0
offset_top = 576.0
offset_right = 1120.0
offset_bottom = 626.0
texture_normal = ExtResource("3_v0bho")
texture_pressed = ExtResource("3_v0bho")
stretch_mode = 0
script = ExtResource("4_upirh")
reference_path = "res://scenes/Menus/MainMenu.tscn"

[node name="Label" type="Label" parent="CanvasLayer/BackToMenu"]
layout_mode = 0
offset_right = 232.0
offset_bottom = 49.0
theme = ExtResource("2_4heag")
text = "Back to menu"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="LevelMusic" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("7_o10ic")
volume_db = -10.0
autoplay = true
bus = &"Music"
